@@ -1,3 +1,9 @@
+2006-05-24  Michael S. Tsirkin  <mst@mellanox.co.il>
+
+	* src/srq.c (mthca_tavor_post_srq_recv): Fix posting of lists of
+	receives that have exactly a multiple of 256 entries (same as QP
+	bug fixed below).
+
 2006-05-22  Roland Dreier  <rdreier@cisco.com>
 
 	* configure.in, src/mthca.c (openib_driver_init): Check for the
